# yo6530

./: .gitignore  6530-002.hex  Makefile  README.md  mcs6530.sv  trace.gtkw
.builds/: build.yml
dwfpy/: tests.py
hw_tester/digilent_digital_discovery/python/: rom_test.py  timer_irq_test.py
hw_tester/mega2560_pro/docs/: README.md
hw_tester/mega2560_pro/hw/gerber/: chip_tester-B_Cu.gbr  chip_tester-B_Mask.gbr  chip_tester-B_Paste.gbr  chip_tester-B_Silkscreen.gbr  chip_tester-Edge_Cuts.gbr  chip_tester-F_Cu.gbr  chip_tester-F_Mask.gbr  chip_tester-F_Paste.gbr  chip_tester-F_Silkscreen.gbr  chip_tester-NPTH.drl  chip_tester-PTH.drl  chip_tester-job.gbrjob
hw_tester/mega2560_pro/hw/kicad/: chip_tester.kicad_pcb  chip_tester.kicad_prl  chip_tester.kicad_pro  chip_tester.kicad_sch
hw_tester/mega2560_pro/rust/: Cargo.toml
hw_tester/mega2560_pro/rust/mos6530_hw_tests/: Cargo.toml  README.md
hw_tester/mega2560_pro/rust/mos6530_hw_tests/.cargo/: config.toml
hw_tester/mega2560_pro/rust/mos6530_hw_tests/src/: main.rs
hw_tester/mega2560_pro/rust/mos6532_hw_tests/: Cargo.toml
hw_tests/python/: requirements.txt
hw_tests/rust/mos6530_hw_tests/src/: main.rs
hw_tests/rust/mos6532_hw_tests/: README.md
pydwf/: tests.py
reference/: mcs6530.sv
reference/captures/: c64_bus_timing.csv  c64_bus_timing.vcd  waveforms_csv_to_vcd.py
research/: ram_test.py  rom_test.py
roms/: 6530-002.hex  6530-003.hex
sim/: verilator_driver.cpp  verilator_top.v
src/: io.v  mcs6530.sv  mcs6530.v  ram.v  rom.v  timer.v  top.v
test/: timertest-full.hex
(+1 files in other folders)
